<resources>
    <string name="app_name">ListOfBooks</string>


    <!--Books data   -->
    <string name="book_1_name">کتاب دنیای قشنگ نو</string>
    <string name="book_1_author">آلدوس هاکسلی</string>
    <string name="book_1_publisher">نیلوفر</string>
    <string name="book_1_desc">کنترل کنندگان جهان در آینده ای بسیار دور، جامعه ای آرمانی خلق کرده اند که تمامی اعضای آن، به واسطه ی استفاده ی هوشمندانه از مهندسی ژنتیک، شست وشوی مغزی، روابط جنسی و مواد مخدر، مشتریانی راضی و خشنود هستند. به نظر می رسد در این جامعه، تنها شخصیتی به اسم برنارد مارکس است که فکر و خیال رهایی از این اجتماع را در سر می پروراند. شاید رفتن به یکی از معدود جوامع کوچک باقی مانده، بتواند علاجی بر پریشانی و آشفتگی مارکس باشد؛ جوامعی استثنایی که در آن ها هنوز زندگی غیرآرمانی به شیوه ی گذشته در جریان است.</string>

    <string name="book_2_name">کتاب مزرعه ی حیوانات</string>
    <string name="book_2_author">جورج اورول</string>
    <string name="book_2_publisher">دیوار</string>
    <string name="book_2_desc">رمان مزرعه ی حیوانات، افسانه ای مدرن و اثر نویسنده ی بسیار توانمندی است که استعداد درخشانش در نوشتن این ژانر از هجو، برای تمامی کتاب دوستان در سرار جهان به اثبات رسیده است. داستان کتاب، حکایت شورش حیوانات یک مزرعه علیه انسان هاست. خوک ها، رهبری سایر حیوان ها را به دست گرفته و در تلاش اند تا برتری خود را به اسب ها، گاوها، گوسفند ها و بقیه بقبولانند. اولین جرقه های شورش، زمانی زده می شود که خوکی، برای به دست گرفتن مالکیت جریان برق، پیشنهاد ساخت یک آسیاب بادی را مطرح می کند؛ ایده ای که ناپلئون، رهبر بی چون و چرای قیام، آن را از آن خود می داند.</string>

    <string name="book_3_name">کتاب مرگ ایوان ایلیچ</string>
    <string name="book_3_author">لئو تولستوی</string>
    <string name="book_3_publisher">مهتاب</string>
    <string name="book_3_desc">کتاب مرگ ایوان ایلیچ، رمانی نوشته ی لئو تولستوی است که اولین بار در سال 1886 به چاپ رسید. این رمان که به عنوان یکی از برترین شاهکارهای ادبیات در رابطه با موضوع مرگ در نظر گرفته می شود، به داستان قاضی‌ای می پردازد که در طول زندگی خود، به اجتناب ناپذیری مرگ، تنها در حد فکری گذرا اندیشیده است. اما یک روز، مرگ حضور خود را اعلام می کند و او با حیرت و سرگشتی فراوان مجبور می گردد که با میراییِ خود رو به رو شود.</string>

    <string name="book_4_name">کتاب بیگانه</string>
    <string name="book_4_author">آلبر کامو</string>
    <string name="book_4_publisher">نیلوفر</string>
    <string name="book_4_desc">کتاب بیگانه، اثر نویسنده ی فرانسوی، آلبر کامو بوده و در سال 1942 انتشار یافته است. از پس زمینه و جان مایه ی رمان بیگانه ، اغلب به عنوان مثالی از فلسفه ی ابزورد و هستی گرایانه ی کامو یاد شده است؛ گرچه خود او، اگزیستانسیال بودن این اثر را رد کرده است. شخصیت اصلی کتاب، یک مرد فرانسوی/الجزایری بی تفاوت به نام مورسو است که با عباراتی چون «شهروند رام شده ی فرانسه در آفریقای شمالی» و «مرد مدیترانه ای» توصیف شده است؛ هرچند مورسو به ندرت از فرهنگ سنتی مدیترانه بویی برده و در آن سهیم می شود. او در مراسم خاک سپاری مادرش حضور می یابد و چند روز بعد، مردی عرب را که درگیر تنازعی با یکی از دوستانش بوده، در الجزیره ی تحت اشغال فرانسوی ها به قتل می رساند.</string>

    <string name="book_5_name">کتاب شازده کوچولو</string>
    <string name="book_5_author">آنتوان دو سنت اگزوپری</string>
    <string name="book_5_publisher">نگاه</string>
    <string name="book_5_desc">رمان شازده کوچولو، یک داستان تمثیلی اخلاقی، خودزندگی نامه ای معنوی و رمانی تأثیرگذار است که بیش از هرکتاب دیگری از فرانسه به زبان های دیگر ترجمه شده است. این اثر با جذابیتی پایان ناپذیر، داستان پسرکی را تعریف می کند که محیط امن سیاره ی کوچکش را به منظور سفر در جهان هستی و آموختن پیچ و خم های رفتار بزرگترها ترک می کند و در طول این سفر، ملاقات های شگفت انگیزی نصیبش می شود. سفر اودیسه وار شخصیت اصلی داستان، با ماجراجویی در سیاره ی زمین به اوج خودش می رسد.</string>
    <!-- end -->
    <string name="book_image_content_description">book_image</string>
    <string name="book_content_button">back_button</string>
    <string name="book_list_icon">book_list_icon</string>
    <string name="book_list">کتاب ها</string>

</resources>