<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="227dp"
        android:layout_height="362dp"
        android:contentDescription="@string/book_image_content_description"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/book1" />

    <TextView
        android:id="@+id/book_content_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_1_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_cover"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/book_content_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_1_author"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_content_name"
        app:layout_constraintVertical_bias="0.025" />


    <TextView
        android:id="@+id/book_content_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_1_publisher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_content_author"
        app:layout_constraintVertical_bias="0.027" />


    <TextView
        android:id="@+id/book_content_desc"
        android:layout_width="346dp"
        android:layout_height="204dp"
        android:scrollbars="vertical"
        android:text="@string/book_1_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_content_publisher"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/book_content_button"
        app:icon="@drawable/myback_button"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/book_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>