<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/book_image_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/book_image_content_description"
            android:padding="6dp"
            tools:srcCompat="@drawable/book1" />

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_1_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/book_writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_1_author"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>